# System_Integration

./: .gitignore  LICENSE  README.md  me.csv  me.json  me.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
01._Miscellaneous/: paymentIFrame.html
01a File formats bonanza/: me.csv  me.json  me.txt  me.xml  me.yaml
01a File formats bonanza/python_solution/: dynamicFileReader.py
01a_File_formats_bonanza/: me.csv  me.json  me.txt  me.xml  me.yaml
01a_File_formats_bonanza/python_solution/: dynamicFileReader.py  endpointController.py
01a_File_formats_bonanza/typescript_solution/: fileHandler.ts  index.html  index.ts  readCSVFile.ts  readCSVFiles.ts  readJsonFile.ts  readTxtFiles.ts  readXMLFile.ts  readXMLFiles.ts  readYamlFile.ts  readYamlFiles.ts
01a_File_formats_bonanza/typescript_solution/controllers/: fileController.ts
01a_File_formats_bonanza/typescript_solution/files/: readCSVFile.ts  readJsonFile.ts  readTxtFile.ts  readXMLFile.ts  readYamlFile.ts
01a_File_formats_bonanza/typescript_solution/routes/: fileRoute.ts
01a_File_formats_bonanza/typescript_solution/utils/: fileHandler.ts
02._Data_Files/: ReadMe.md
03._Modules/html_no_modules/: index.html  index.js  myModule.js
03._Modules/node_commonjs_modules/: index.js  myModule.js
04b._[Pair]Database_granular_access/: Database_choice.md  Exposee.md  Integrator.md  README.md
05a._Expose_Integrate_Webhook_System/: README.md
05a._Expose_Integrate_Webhook_System/python-webhook/: integrator.py  main.py  pyproject.toml
06._Servers/python/: main.py  pyproject.toml
08._Server-To-Server/: ReadMe.md
08._Server-To-Server/node/: app.js
08a._document_database/: ReadMe.md  main.py
08b._data_migrator/: alembic.ini  pyproject.toml
08b._data_migrator/alembic/versions/: 868beb4844d5_create_account_table.py
09._Environment_Variables/node/: .env-dev  index.js  package-lock.json  package.json
09._Environment_Variables/python/: main.py  pyproject.toml
09a._generate_code_DLS/: Readme.md
10._Date/node/: app.js  index.js
10._Date/python/: main.py
10a._GraphQL/: ReadMe.md
10b._Payment_integration/: main.py  pyproject.toml
11._Short_Polling/node/: app.js  package.json
11._Short_Polling/public/: index.html
12._Long_Polling/node/: app.js  package.json
13._Server-sent_Events/: ReadMe.md
13._Server-sent_Events/python-sse/: main.py  pyproject.toml
13._Server-sent_Events/python-sse/templates/: index.html
14._Websockets/python-fastapi/: main.py  pyproject.toml
14._Websockets/python-plain/: server.py
15._github_Webhooks/: app.js  package.json
15._github_Webhooks/python-webhooks/: main.py  pyproject.toml
16._CORS/: ReadMe.md  index.html
16._CORS/node-CORS/: app.js  package-lock.json  package.json
16._CORS/python-CORS/: main.py  pyproject.toml
17._Multipart-Forms/: index.html
17._Multipart-Forms/node-multipart/: app.js  package-lock.json  package.json
17._Multipart-Forms/python-multiforms/: main.py  pyproject.toml
18._images/: ReadMe.md  base64.html
19._Audio/: index.html
20._MPEG_DASH/: about.md  app.js
21._MYSQL_Backup/: backup.sql
26._GrapQL/public/: index.html
27._Web_Scraping_Crawling/: ReadMe.md
TCP:08._Server-To-Server/node/: app.js
TCP:08._Server-To-Server/python/: main.py  pyproject.toml
