[tool.poetry]
name = "08b-data-migrator"
version = "0.1.0"
description = ""
authors = ["Roed <Geofery10@hotmail.com>"]
readme = "README.md"
packages = [{include = "08b"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.29"
pymysql = "^1.1.0"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
