[tool.poetry]
name = "first-server"
version = "0.1.0"
description = ""
authors = ["Roed <Geofery10@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "first_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
