[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["Roed <Geofery10@hotmail.com>"]
readme = "README.md"
packages = [{include = "python_fastapi"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
